Twig filter dump replace by yaml_dump

--- a/Resources/views/Collector/container.html.twig
+++ b/Resources/views/Collector/container.html.twig
@@ -39,7 +39,7 @@
                     <tr>
                         <th width="420"><code>{{ key }}</code></th>
                         <td>
-                            {{ value|dump }}
+                            {{ value | yaml_dump }}
                         </td>
                     </tr>
                 {% endfor %}
