Make container collector fails silently if not in debug mode

--- a/Resources/views/Collector/container.html.twig
+++ b/Resources/views/Collector/container.html.twig
@@ -12,67 +12,56 @@
 </span>
 {% endblock %}
 
-{% macro display_array(var, padding) %}
-    {% if var.length %}
-        {% for key, value in var %}
-        <ul style="padding-left: {{ padding }}px;">
-            <li>
-                <code>{{ key }}</code>: 
-                {{ _self.display_array(value, 20) }}
-            </li>
-        </ul>
-        {% endfor %}
-    {% else %}
-        <code>{{ var }}</code>
-    {% endif %}
-{% endmacro %}
-
 {% block panel %}
-    <h2>Container Parameters</h2>
-    <table>
-        {% for service, parameters in collector.parameters %}
-        <tr>
-            <th>{{ service }}</th>
-            <td>
-                <table>
-                {% for key, value in parameters %}
-                    <tr>
-                        <th width="420"><code>{{ key }}</code></th>
-                        <td>
-                            {{ value | yaml_dump }}
-                        </td>
-                    </tr>
-                {% endfor %}
-                </table>
-            </td>                                
-        </tr>
-        {% endfor %}
-    </table>
-    <h2>Container Services:</h2>
-    <table>
-    	<tr>
-    		<th>Name</th>
-    		<th>Scope</th>
-    		<th>Class Name</th>
-    	</tr>
-    {% for service_id, service in collector.services %}
-        <tr class="{{ loop.index is odd ? 'odd' : 'even' }}">
-            <th><code>{{ service_id }}</code></th>
-            <td>
-            	{% if service.scope is defined %}
-            		{{ service.scope }}
-            	{% else %}
-            		N/A
-            	{% endif %}
-            </td>
-            <td>
-            	{% if service.class is defined %}
-            		{{ service.class }}
-            	{% elseif service.alias is defined %}	
-            		alias to {{ service.alias }}
-            	{% endif %}
-            </td>
-        </tr>
-    {% endfor %}
-    </table>
+	{% if collector.services is empty %}
+		<em>No debug container information</em>
+	{% else %}
+	    <h2>Container Parameters</h2>
+	    <table>
+	        {% for service, parameters in collector.parameters %}
+	        <tr>
+	            <th>{{ service }}</th>
+	            <td>
+	                <table>
+	                {% for key, value in parameters %}
+	                    <tr>
+	                        <th width="420"><code>{{ key }}</code></th>
+	                        <td>
+	                            {{ value | yaml_dump }}
+	                        </td>
+	                    </tr>
+	                {% endfor %}
+	                </table>
+	            </td>                                
+	        </tr>
+	        {% endfor %}
+	    </table>
+	    <h2>Container Services:</h2>
+	    <table>
+	    	<tr>
+	    		<th>Name</th>
+	    		<th>Scope</th>
+	    		<th>Class Name</th>
+	    	</tr>
+	    {% for service_id, service in collector.services %}
+	        <tr class="{{ loop.index is odd ? 'odd' : 'even' }}">
+	            <th><code>{{ service_id }}</code></th>
+	            <td>
+	            	{% if service.scope is defined %}
+	            		{{ service.scope }}
+	            	{% else %}
+	            		N/A
+	            	{% endif %}
+	            </td>
+	            <td>
+	            	{% if service.class is defined %}
+	            		{{ service.class }}
+	            	{% elseif service.alias is defined %}	
+	            		alias to {{ service.alias }}
+	            	{% endif %}
+	            </td>
+	        </tr>  
+	    {% endfor %}
+	    </table>
+	{% endif %}	    
 {% endblock %}
