Add "Method" to Routes collect.

--- a/Resources/views/Collector/routing.html.twig
+++ b/Resources/views/Collector/routing.html.twig
@@ -44,6 +44,9 @@
                         @{{ route.name }}
                     </th>
                     <td>
+                        <code>{{ route.method }}</code>
+                    </td>
+                    <td>
                         <code>{{ route.pattern }}</code>
                     </td>
                     <td>
