Fixed assetic view

--- a/Resources/views/Collector/assetic.html.twig
+++ b/Resources/views/Collector/assetic.html.twig
@@ -58,7 +58,7 @@
                         </ul>
                     </td>
                     <td>
-                        <a target="_blank" href="//{{ collection.target }}">{{ collection.target }}</a>
+                        <a target="_blank" href="{{ request.basePath }}/{{ collection.target }}">{{ collection.target }}</a>
                     </td>
                 </tr>
             {% endfor %}
