--- a/Resources/views/Collector/twig.html.twig
+++ b/Resources/views/Collector/twig.html.twig
@@ -76,11 +76,24 @@
                 {% endif %}
             </th>
             <td>
-                {% for parameter, type in template.parameters %}
-                <code>
-                    {{ parameter }}: {{ type }}
-                </code>
-                {% if not loop.last %}<br />{% endif %}
+                {% for parameter, metadata in template.parameters %}
+                    {% if metadata.type == 'boolean' %}
+                        {% set value = metadata.value ? 'true' : 'false' %}
+                    {% elseif metadata.type == 'string' %}
+                        {% set maxStrLength = 40 %}
+                        {% set value = metadata.value %}
+                        {% if value|length > maxStrLength %}
+                            {% set value = value|slice(0, maxStrLength) ~ '…' %}
+                        {% endif %}
+                        {% set value = '"' ~ value ~ '"' %}
+                    {% else %}
+                        {% set value = metadata.value %}
+                    {% endif %}
+                    <code>
+                        {{ parameter }}: <em style="color: #aaa">{{ metadata.type }}</em>
+                        <span style="color: #009E00">{{ value }}</span>
+                    </code>
+                    {% if not loop.last %}<br />{% endif %}
                 {% endfor %}
             </td>
         </tr>
