--- a/Resources/views/Collector/container.html.twig
+++ b/Resources/views/Collector/container.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebProfilerBundle:Profiler:layout.html.twig' %}
+{% extends '@WebProfiler/Profiler/layout.html.twig' %}
 
 
 {% block toolbar %}
@@ -19,7 +19,7 @@
                 <span class="sf-toolbar-status">{{ collector.parameters|length }}</span>
             </div>
         {% endset %}
-        {% include 'WebProfilerBundle:Profiler:toolbar_item.html.twig' with { 'link': profiler_url } %}
+        {% include '@WebProfiler/Profiler/toolbar_item.html.twig' with { 'link': profiler_url } %}
     {% endif %}
 {% endblock %}
 
